--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fontsource/press-start-2p": "^4.5.11",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
